feat(StatusBarMenuBuilder): localize "Hide accounts" label (#250)
* feat(StatusBarMenuBuilder): localize "Hide accounts" label
- add translations for multiple languages to Localizable.xcstrings

* docs: regenerate agentlens documentation [skip ci]

---------

Co-authored-by: github-actions[bot] <github-actions[bot]@users.noreply.github.com>
Co-authored-by: Trong Nguyen <62984954+nguyenphutrong@users.noreply.github.com>

--- a/Quotio/Localizable.xcstrings
+++ b/Quotio/Localizable.xcstrings
@@ -8841,6 +8841,35 @@
         }
       }
     },
+    "menubar.hideAccounts" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Hide accounts"
+          }
+        },
+        "fr" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Masquer les comptes"
+          }
+        },
+        "vi" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Ẩn tài khoản"
+          }
+        },
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "隐藏账户"
+          }
+        }
+      }
+    },
     "menubar.viewMoreAccounts" : {
       "extractionState" : "manual",
       "localizations" : {
